Moved to JRE 14 and removed warnings